--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container">
         <div class="meal-content col-lg-100 col-md-100  col-sm-100 col-xs-85">
             <div class="grid">
-                <div class="meal-content-box col-lg-23 col-md-100 col-xs-100 first">
-                    <div class="grid">
+                <div class="meal-content-box col-lg-23 col-md-100 col-xs-100 first ">
+                    <div class="grid reverse">
                         <div class="meal_box-img col-lg-100 col-md-50 col-sm-50 col-xs-100">
                             <img src="img/image.jpg">
                         </div>
@@ -39,8 +39,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="meal-content-box col-lg-23 col-md-100 col-xs-100">
-                    <div class="grid">
+                <div class="meal-content-box col-lg-23 col-md-100 col-xs-100 ">
+                    <div class="grid reverse">
                         <div class="meal_box-img col-lg-100 col-md-50 col-sm-50 col-xs-100">
                             <img src="img/Healthy-grain-bowl.sq_.jpg">
                         </div>
